2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Remove some settings in early-init.el

	* early-init.el (cursor-in-non-selected-windows)
	(highlight-nonselected-windows, inhibit-compacting-font-caches)
	(bidi-paragraph-direction, bidi-inhibit-bpa): No longer set.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Fix timeout support in `gptel-tools--url-retrieve'

	* site-lisp/gptel-tools.el (gptel-tools-default-timeout): New variable.
	(gptel-tools--url-retrieve): Fix timeout support.  Omitting
	timeout arg now means using `gptel-tools-default-timeout'.  All
	call site changed.


2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Temporarily disable timeout support in gptel-tools--url-retrieve

	* site-lisp/gptel-tools.el (gptel-tools--url-retrieve): Comment out
	timer.  Add fixme.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Use `completion-table-with-metadata'

	* site-lisp/obsoletes/gtkdoc.el (gtkdoc-lookup):
	* site-lisp/good-doc.el (good-doc--read-entry):
	* site-lisp/dotemacs-core.el (dotemacs--major-mode-completion-table):

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el: Bind C-c DEL to delete-char in paredit-mode.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (pp-default-function): Declare.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (+straight-repo-up-to-date-p): Check push remote too.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Update macros in dotemacs-core

	* site-lisp/dotemacs-core.el (delq!, remq!): Fix.
	(delete!, remove!): New functions.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	Fix modify-other-keys--init

	* site-lisp/modify-other-keys.el (modify-other-keys--init):
	Use setf with delete to make sure the value is actually deleted.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Do not use built-in packages any more.

2025-09-26  Zhengyi Fu  <i@fuzy.me>

	* init.el (copy-message): Error if message ring is empty.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	* init.el: Disable meow-indicator since we use doom-modeline.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Fix error `C-<space>' undefined